# sdk/lib/server/api/openapi.yaml
@@ -51,6 +51,27 @@ paths:
       tags:
         - Network
       x-eov-operation-handler: controllers/NetworkController
+  /network/search:
+    post:
+      description: This is the Search API
+      operationId: networkSearch
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/NetworkRequest'
+        required: true
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CloverGeneralResponse'
+          description: Expected response to a json
+      summary: Search Network
+      tags:
+        - Network
+      x-eov-operation-handler: controllers/NetworkController
   /network/list:
     post:
       description: This endpoint returns a list of NetworkIdentifiers that the Rosetta
